Several bugs have been fixed
